Jumper fix

--- a/src/pga.scss
+++ b/src/pga.scss
@@ -835,6 +835,11 @@ ul{
 
     .row{
         margin-bottom: 80px;
+
+        .jumper{
+            position: relative;
+            top: -150px;
+        }
     }
 
     .colTitle{
